--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .DS_Store
+.ipynb_checkpoints
+project1/.ipynb_checkpoints/ECE219 Project1-checkpoint.ipynb
+Folder/.ipynb_checkpoints/*.ipynb
+.ipynb_checkpoints
